04.myfirst-api-server/04.ingress/frontend-deploy.yaml
# 03.frontend Deployment
# - 정적 파일(HTML/CSS/JS)을 nginx로 서빙하는 컨테이너를 k8s에 배포하기 위한 정의
# - image 값은 docker-push.sh로 올린 이미지 주소로 바꿔서 사용한다.
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    update: 990e2061
  name: skala-myfirst-frontend
  namespace: class-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skala-myfirst-frontend
  template:
    metadata:
      labels:
        app: skala-myfirst-frontend
    spec:
      containers:
        - name: frontend
          image: skala-registry.skala-us.com/class-0/skala-frontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
